# auxil

./: .dockerignore  .env-template  .gitignore  .pre-commit-config.yaml  CONTRIBUTION.md  Dockerfile  README.md  config.example.py  docker-compose.yml  launcher.py  mypy.ini  pyproject.toml
auxil/: __init__.py  __main__.py  bot.py
cogs/: util.py
hasura/migrations/: 1561493904277_create_table_public_guild_configuration.down.yaml  1561493904277_create_table_public_guild_configuration.up.yaml  1561493949009_create_table_public_country.down.yaml  1561493949009_create_table_public_country.up.yaml  1561494036288_create_table_public_message.down.yaml  1561494036288_create_table_public_message.up.yaml  1561494049130_create_table_public_user.up.yaml  1561494063244_create_relationship_user_public_table_message.down.yaml  1561494063244_create_relationship_user_public_table_message.up.yaml  1561494082711_create_relationship_messages_public_table_user.down.yaml  1561494082711_create_relationship_messages_public_table_user.up.yaml  1561494203091_create_table_public_resource.down.yaml  1561494203091_create_table_public_resource.up.yaml
