[tool.poetry]
name = "auxil"
version = "0.1.0"
description = []
authors = []
license = "AGPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.2.2"

[tool.poetry.dev-dependencies]
mypy = "^0.711"
pre-commit = "^1.17"

[tool.poetry.scripts]
start = "launcher:main"
dev = "launcher:dev"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
